--- a/css/main.css
+++ b/css/main.css
@@ -8,18 +8,6 @@ html, body {
   padding-bottom: 3%;
 }
 
-#clock-countdown span {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  text-transform: lowercase;
-  font-size: 18px;
-}
-
-#clock-countdown {
-  margin-top: -15px;
-  margin-bottom: 15px;
-}
-
 body {
   /* Default to system font if custom font not supported */
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -104,7 +92,8 @@ body {
 }
 
 .navbar-brand img {
-  height: 24px;
+  min-height: 22px;
+  height: 22px;
 }
 
 .navbar .navbar-nav {
@@ -293,7 +282,8 @@ body {
 }
 
 #profiles .list-group-item .profile-name {
-  font-size: 24px;
+  font-weight: 400;
+  font-size: 26px;
 }
 
 #profiles .list-group-item .profile-title {
@@ -313,11 +303,6 @@ body.mobile {
 body.mobile .animated {
   display: block;
   visibility: visible;
-}
-
-#clock-countdown {
-  color: #fff;
-  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
